# mixed-strategies-rs

./: Cargo.toml  LICENSE  README.md
examples/: company-greed-3.matrix  company-greed.matrix  mighty-blow.matrix  penaltykick.matrix  rsp-bigscissors.matrix  rsp-leftrock-equal.matrix  rsp-leftrock.matrix  rsp.matrix  strategyst-1.matrix  strategyst-2.matrix
src/: lib.rs  main.rs
tests/: tests.rs
