# Copyright © 2019 Bart Massey
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "mixed-strategies"
version = "0.1.0"
authors = ["Bart Massey <bart@cs.pdx.edu>"]
license-file = "LICENSE"
description = "mixed-strategies game solver"
homepage = "http://github.com/BartMassey/mixed-strategies-rs"
repository = "http://github.com/BartMassey/mixed-strategies-rs"
readme = "README.md"
keywords = ["game", "solver", "mixed-strategies"]
categories = ["algorithms", "command-line-utilities", "science"]
edition = "2018"


[dependencies]
ndarray = "0.12"
ordered-float = "1.0"
tabwriter = "1.1"
